[gd_scene load_steps=6 format=3 uid="uid://ddpx70el7fyvs"]

[ext_resource type="Script" path="res://fish.gd" id="1_3sfbv"]
[ext_resource type="Texture2D" uid="uid://23c6oq5sydgu" path="res://textures/fish1Texture.png" id="1_rsawj"]
[ext_resource type="Script" path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="3_qt56j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kw84c"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0nfwu"]
radius = 7.07107

[node name="fish" type="CharacterBody2D"]
collision_mask = 254
motion_mode = 1
script = ExtResource("1_3sfbv")
attraction = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_rsawj")

[node name="repulsion" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="repulsion"]
visible = false
shape = SubResource("CircleShape2D_kw84c")

[node name="alignement" type="Area2D" parent="."]
collision_layer = 0

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="alignement"]
visible = false
polygon = PackedVector2Array(5.51091e-15, -90, 52.9007, -72.8115, 85.5951, -27.8115, 85.5951, 27.8115, 52.9007, 72.8115, 5.51091e-15, 90, -52.9007, 72.8115, -85.5951, 27.8115, -85.5951, -27.8115, -52.9007, -72.8115, -1.65327e-14, -90, -7.34788e-15, -40, -23.5114, -32.3607, -38.0423, -12.3607, -38.0423, 12.3607, -23.5114, 32.3607, 2.44929e-15, 40, 23.5114, 32.3607, 38.0423, 12.3607, 38.0423, -12.3607, 23.5114, -32.3607, 2.44929e-15, -40, 0.0001, -89.9999)
script = ExtResource("3_qt56j")
radius = 65.0
width = 50.0
quality = 10

[node name="attraction" type="Area2D" parent="."]
collision_layer = 0

[node name="DonutCollisionPolygon2D" type="CollisionPolygon2D" parent="attraction"]
visible = false
polygon = PackedVector2Array(8.57253e-15, -140, 82.2899, -113.262, 133.148, -43.2624, 133.148, 43.2624, 82.2899, 113.262, 8.57253e-15, 140, -82.2899, 113.262, -133.148, 43.2624, -133.148, -43.2624, -82.2899, -113.262, -2.57176e-14, -140, -1.65327e-14, -90, -52.9007, -72.8115, -85.5951, -27.8115, -85.5951, 27.8115, -52.9007, 72.8115, 5.51091e-15, 90, 52.9007, 72.8115, 85.5951, 27.8115, 85.5951, -27.8115, 52.9007, -72.8115, 5.51091e-15, -90, 0.0001, -140)
script = ExtResource("3_qt56j")
radius = 115.0
width = 50.0
quality = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0nfwu")

[node name="initialisation" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="repulsion" to="." method="_on_repulsion_body_entered"]
[connection signal="body_exited" from="repulsion" to="." method="_on_repulsion_body_exited"]
[connection signal="body_entered" from="alignement" to="." method="_on_alignement_body_entered"]
[connection signal="body_exited" from="alignement" to="." method="_on_alignement_body_exited"]
[connection signal="body_entered" from="attraction" to="." method="_on_attraction_body_entered"]
[connection signal="body_exited" from="attraction" to="." method="_on_attraction_body_exited"]
[connection signal="timeout" from="initialisation" to="." method="_on_initialisation_timeout"]
